Update jshint files

--- a/.jshintrc
+++ b/.jshintrc
@@ -12,12 +12,9 @@
 	"globals": {
 		"jQuery": true,
 		"Module": true,
-		"Dispatcher": true,
 		"MONKEY": true,
-		"Handlebars" : true,
 		"console" : true,
-		"Toastr" : true,
-		"wp" : true,
-		"google" : true
+		"riot": true,
+		"wp" : true
 	}
 }
