--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "private": true,
   "version": "1.6.0",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-concurrent": "~0.4.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-handlebars": "^0.10.2",
+    "grunt": "^1.0.1",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-sass": "^0.4.0",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-riot": "^0.1.6",
-    "grunt-wp-i18n": "~0.4.3",
-    "load-grunt-configs": "~0.1.0",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.0"
+    "grunt-wp-i18n": "^0.5.4",
+    "load-grunt-configs": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2",
+    "time-grunt": "^1.4.0"
   }
 }
