--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "apiki-wp-api",
+  "name": "gb-plugin-api",
   "private": true,
-  "version": "1.6.0",
+  "version": "0.0.1",
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-concurrent": "^2.3.1",
@@ -13,7 +13,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-riot": "^0.1.6",
     "grunt-wp-i18n": "^0.5.4",
-    "load-grunt-configs": "^1.0.0",
+    "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.2",
     "time-grunt": "^1.4.0"
   }
