--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "gb-plugin-api",
-  "private": true,
   "version": "0.0.1",
+  "description": "Ghost Back plugin API.",
+  "main": "gb-plugin-api.php",
+  "dependencies": {},
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-concurrent": "^2.3.1",
@@ -16,5 +18,23 @@
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.2",
     "time-grunt": "^1.4.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Apiki/gb-plugin-api.git"
+  },
+  "keywords": [
+    "wordpress",
+    "plugin",
+    "api"
+  ],
+  "author": "Apiki",
+  "license": "GPL-2.0",
+  "bugs": {
+    "url": "https://github.com/Apiki/gb-plugin-api/issues"
+  },
+  "homepage": "https://github.com/Apiki/gb-plugin-api#readme"
 }
